# burst

./: .gitignore  Makefile  Makefile.local.template
choregraphe_moves/: Circle_Strafe.xar  Goalie_Leap_Right.xar  TurnInPlace.xar  TurnInPlaceCCW.xar  TurnInPlaceCCW2.xar  TurnInPlaceOPT2.xar  walkAndTurnTesting.xar
data/calibration/: results_of_personalization_tests.csv
data/joints/: avg-all.ods  cech-back-stand.csv  cech-belly-stand.csv  cech-circle-strafe-ccw.csv  cech-circle-strafe-cw.csv  cech-fw.csv  cech-init-pose.csv  cech-sit.csv  cech-stand.csv  cech-turn-ccw.csv  cech-turn-cw.csv  raul-back.csv  raul-belly-stand.csv  raul-fw4.csv  raul-init-pos.csv  raul-sit.csv  raul-stand.csv
data/network/: getListData_naoqi_2.tcp  getListData_pynaoqi.tcp  getListData_pynaoqi_3.tcp  getListData_pynaoqi_4.tcp  getListData_pynaoqi_5.tcp  getListData_pynaoqi_6.tcp  gotoAngleWithSpeed_naoqi.tcp  gotoAngleWithSpeed_pynaoqi.tcp
data/profile/: cpp_timings.txt  memory_footprint_naoqi.txt
data/robot_logs/: maldini_kicker_2406_0203.txt
data/sonars/: logUs-cech  logUs-gerrard  logUs-maldini  logUs-messi  logUs-raul
doc/: Makefile  TODO_INT_DAY_15_6.txt  burst_high_level_architecture_user_api.sla  results_of_personalization_tests.csv  robocup_spl_requirements_document.gnumeric
doc/Logo/: burst_logo.xcf
doc/Team Description Document/: burst.tex
doc/Team Description Paper/: spl_burst.tex  typeinst.tex
etc/: autoload.ini  ethers  hosts  interfaces
gamecontroller/: .gitignore  GameControllerMessage.py  SOURCE.txt  game_controller_constants.py  game_controller_message.py
gamecontroller/GameController/: .gitignore  Start_GameController.bash  Start_GameController.cmd
gamecontroller/GameController2006/: CHANGES  Makefile  README  build.xml
gamecontroller/GameStateVisualizer/: Start_GameStateVisualizer.bash  Start_GameStateVisualizer.cmd  teams.cfg
lib/: .gitignore  .project  .pydevproject  burst.py  burst_consts.py  burst_events.py  burst_field.py  burst_numpy_util.py  burst_target.py  burst_util.py  daemon.py  debugsocket.py  gamecontroller_consts.py  ipython_view.py  mygtk.py  myreactor.py  pynaoqi.py  pynaoqi_twisted.py  setup_burst.py  test_ipython_view.py  vision_definitions.py
lib/bodyposition/: __init__.py  bodyposition.py
lib/burst/: __init__.py  actions.py  base.py  behavior.py  behavior_params.py  burst_exceptions.py  burst_threading.py  consts.py  debug_flags.py  deferreds.py  eventmanager.py  events.py  field.py  image.py  kinematics.py  moves.py  moves_ASAF_OLD_REMOVE.py  moves_NB.py  naoqi_extended.py  naoqi_pynaoqi.py  odometry.py  options.py  player.py  player_settings.py  position.py  robot.py  sensing.py  vision.py  walkparameters.py  world.py
lib/etc/: .gitignore  mmap_variables.txt  recorder_vars.txt  robot_settings.py
lib/gamecontroller/: __init__.py  constants.py  gamecontroller.py  listener.py  message.py  messages.py  testcase.py
lib/old_game_controller/: __init__.py  controllershell.py  gamecontroller.py  messages.py
lib/players/: .gitignore  asafWalkTester.py  ballfinder.py  callLaterTester.py  cameraSwitchTester.py  centerTester.py  circle_strafer.py  dcm_executor.py  domove_constants.py  donothing.py  elad.py  empty.py  eventsTester.py  gameEnterTester.py  gamecontrollertester.py  gameplayer.py  goalAlignerTester.py  goalApproachingGoalie.py  goalie.py  goalieTester.py  headTrackingLowLevelTester.py  headTrackingTester.py  head_move_and_walk_tester.py  kickTuner.py  kicker.py  kickerOLD.py  kicker_v1.py  kicktest.py  localize.py  nodtester.py  passing.py  penaltygoalie.py  penaltykicker.py  personal_walk_manual_tweaker.py  player_init.py  rectangle.py  registeroneTester.py  save_variable_names.py  searcherTester.py  searcherTimeoutTester.py  (+15 more)
lib/pynaoqi/: TODO.txt  __init__.py  calibrator.glade  consts.py  gui.py  notes.glade  pshell.py  pynaoqi_twisted.py  shell.py  shell_guts.py  testers.py  video.glade  widgets.py
lib/tests/: goalie.py  kicker.py  minimal_burst_example.py  player_init.py  read_ball_from_memory_map.sh  reader.py  simulate_button.py  subscribe_tester.py  template_player.py  test_bodyposition.py  test_simulation.py  twisted_reactor_working.py  udpbroadcast.py  udplistener.py
lib/visionmodule/: CMakeLists.txt  config.in  copyto
lib/visionmodule/src/: CMakeLists.txt  config.h  gvm_useGVMsample.py  save_image.py  t1.py  test.py  vis.py  vis_end.py  vis_loop.py  vis_start.py  vision.cpp  vision.h  vision_trackBall.py  visionmodule.cpp  visionmodule.h
naoqi_modules/: README.txt
opennao/: site.py
python_tests/: GetFsrValues.py  GetInertialValues.py  motion_ArmsMotionBalancing.py  motion_CartesianSpace.py  motion_ComCommand.py  motion_CurrentConfig.py  motion_GetInfo.py  motion_GetSensorPosition.py  motion_Hands.py  motion_PoseInit.py  motion_PoseZero.py  motion_Shoot.py  motion_StiffnessOff.py  motion_StiffnessOn.py  motion_Stop.py  motion_TorsoOrientation.py  motion_Walk.py  motion_WalksAndStops.py  naoqi_creating_a_new_module.py  videoInput_getImage.py  vision_landMarkDetection.py  vision_logoDetection.py
src/: .gitignore  Makefile.base  Makefile.commondefs
src/burstmem/: CMakeLists.txt  Makefile  burstmem.cpp  burstmem.h  burstmemmodule.h  burstutil.h  config.h  config.in  copyto  makelocal
src/burstmem/src/: CMakeLists.txt  burstmem.cpp  burstmem.h  burstmemmodule.cpp  burstutil.h
src/imops/: .gitignore  ALImageTranscriber.cpp  ALImageTranscriber.h  Common.h  FieldLines.cpp  GIT_LOG.txt  Kinematics.h  Makefile  MotionDef.h  NaoDef.h  NaoPose.cpp  ObjectFragments.cpp  ObjectFragments.h  Sensors.cpp  Threshold.cpp  Threshold.h  VisionDef.h  VisualFieldObject.cpp  Zlib.h  burstutil.h  corpusconfig.h  imops.c  imops.cpp  imops.h  imops_more_verbose.c  imopsmodule.cpp  imopsmodule.h  manconfig.h  objrec.cpp  profileconfig.h
src/recordermodule/: CMakeLists.txt  copyto  makelocal  makeremote
src/recordermodule/src/: CMakeLists.txt  burstutil.h  config.h  gzstream.cpp  recorder.cpp  recorder.h  recordermodule.cpp  recordermodule.h  recording_thread.cpp  recording_thread.h
webots/: .gitignore
(+1625 files in other folders)
